packages/rspack-test-tools/tests/configCases/errors/hide-stack/loader-throw-hide.js
/** @type {import("@rspack/core").LoaderDefinition} */
module.exports = function () {
	var err = new Error("throw message hide");
	err.stack = "throw stack hide";
	err.hideStack = true;
	throw err;
};
